--- a/Export-Report-Mvc-Net60-Pack/MvcApplication/MvcApplication.csproj
+++ b/Export-Report-Mvc-Net60-Pack/MvcApplication/MvcApplication.csproj
@@ -4,6 +4,16 @@
     <RootNamespace>MvcApplication</RootNamespace>
   </PropertyGroup>
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.5" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="7.0.5">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.5" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="7.0.5">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="Stimulsoft.Reports.Web.NetCore" Version="2023.2.5" />
   </ItemGroup>
 </Project>
