--- a/CI Platform/CIPlatform.Repository/CIPlatform.Repository.csproj
+++ b/CI Platform/CIPlatform.Repository/CIPlatform.Repository.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Aspose.PDF" Version="23.5.0" />
     <PackageReference Include="MailKit" Version="3.5.0" />
     <PackageReference Include="Microsoft.AspNet.WebPages" Version="3.2.9" />
     <PackageReference Include="Microsoft.AspNetCore.Http" Version="2.2.2" />
