Docker implemented with db

--- a/IDVerification/IDVerification/IDVerification.csproj
+++ b/IDVerification/IDVerification/IDVerification.csproj
@@ -5,7 +5,7 @@
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <UserSecretsId>1fe0a33f-3c17-4ccd-a09f-76a28daab2c5</UserSecretsId>
-    <DockerDefaultTargetOS>Windows</DockerDefaultTargetOS>
+    <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
   </PropertyGroup>
 
   <ItemGroup>
